--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,6 @@
 {
   "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
+    "public": "dist/invest-with-material",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   }
 }
