--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,12 @@
 {
   "hosting": {
     "public": "dist/invest-with-material/browser",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
