proxy for localhost

--- a/angular.json
+++ b/angular.json
@@ -75,6 +75,9 @@
               "buildTarget": "invest-with-material:build:development"
             }
           },
+          "options": {
+            "proxyConfig": "src/proxy.config.json"
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
